kubernetes/policies/block-latest-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-latest
spec:
  validationFailureAction: Enforce
  rules:
    - name: block-latest
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "Latest Images are not Allowed"
        pattern:
          spec:
            containers:
              - image: "!*:latest"
