kubernetes/policies/block-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-privileged
spec:
  validationFailureAction: Enforce
  rules:
    - name: block-privilege
      match:
        any:
         - resources: 
             kinds:
               - Pod
    
      validate:
        message: "Privileged Users are not Allowed"
        pattern:
          spec:
            containers:
               - securityContext:
                   privileged: false
